# Chat-Application-Backend-Python-Django-Channels-Websockets

./: .gitignore  README.md  pyproject.toml  req.txt
ChattingApplicationBackend/: .env  manage.py
ChattingApplicationBackend/ChattingApplicationBackend/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
ChattingApplicationBackend/authentication/: jwt_authentication.py  models.py  serializers.py  urls.py  views.py
ChattingApplicationBackend/authentication/migrations/: 0001_initial.py  0002_alter_logindata_user.py
ChattingApplicationBackend/connections/: consumer.py  models.py  routing.py  serializers.py  urls.py  views.py
ChattingApplicationBackend/connections/migrations/: 0001_initial.py  0002_alter_connections_request_status.py
ChattingApplicationBackend/connections/views/: createConnection.py  getFormedConnections.py  getPendingConnections.py  performAction.py
ChattingApplicationBackend/messaging/: models.py  urls.py
ChattingApplicationBackend/messaging/migrations/: 0001_initial.py
ChattingApplicationBackend/users/: admin.py  models.py  serializers.py  urls.py  views.py
ChattingApplicationBackend/users/migrations/: 0001_initial.py
ChattingApplicationBackend/utilities/: encryption.py  util.py
